# rust-axum-web-template

./: .env  .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/controllers/web/: controller.rs
src/database/: database.rs
src/middlewares/: logging_middleware.rs  mod.rs
src/models/: user_model.rs
src/routes/: api_routes.rs  mod.rs  web_routes.rs
