[package]
name = "rust-axum-web-template"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
wither = "0.9"
dotenv = "0.15" 
mongodb = { version = "3.2.2" }